survey-salesforce/salesforce-app/src/objects/SkipCondition__c.object
<CustomObject>
    <fields>
        <fullName>Condition__c</fullName>
        <description>Condition to apply to the source question value.</description>
        <label>Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LesserThan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GreaterThan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InRange</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Negate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine if the result of the evaluation must be negated (return true instead of false, and back-wise).</description>
        <label>Negate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <description>Question on which this condition is applied</description>
        <label>Parent</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Skip Conditions</relationshipLabel>
        <relationshipName>SkipConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SourceQuestion__c</fullName>
        <description>Question whose result will be evaluated to determine if the parent question is shown. This question must be previous to the parent question in the survey.</description>
        <label>SourceQuestion</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Affected Skip Conditions</relationshipLabel>
        <relationshipName>AffectedSkipConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value to compare against the source question value.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Skip Condition</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Skip Condition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skip Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>